--- a/Copy_of_support_vector_regression.ipynb
+++ b/Copy_of_support_vector_regression.ipynb
@@ -1052,7 +1052,7 @@
       },
       "source": [
         "from sklearn.svm import SVR\n",
-        "regressor = SVR(kernel = 'rbf',C= 10000)\n",
+        "regressor = SVR(kernel = 'rbf')\n",
         "regressor.fit(X_train, y_train)\n",
         "ypredd=regressor.predict(X_test)"
       ],
